--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Document</title>
+    <title>Kristen's Design Portfolio</title>
 </head>
 
 <body>
 
     <header>
         <div class="container-nav">
-            <nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: black;">
+            <nav class="navbar fixed-top navbar-expand-md navbar-dark" style="background-color: #202020;">
                 <a href="/index.html" class="navbar-brand">Kristen Marcinek</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#toggleMobileMenu" aria-controls="toggleMobileMenu" aria-expanded="false"
@@ -46,42 +46,76 @@
         </div>
     </header>
 
-    <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
+    <div class="row row-cols-1 row-cols-md-3 g-4 text-white" style="color: white;">
+        <div class="col text-white">
+            <div class="card bg-transparent">
+                <img src="/content/meditative-mosaics.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Meditative Mosaics (2023 - Current)</h5>
+                    <p class="card-text text-white">Meditative Mosaics are an activity at the National Children's Museum created by myself and Langley Lease.</p>
+                    <p class="card-text text-white">With Meditative Mosaics, visitors can create art and pictures through sticking felt pieces on the wall.</p>
+                    <p class="card-text text-white">Meditative Mosaics are part of a larger initiative by myself and the museum to further improve our sensory room space.</p>
+                    <a href="/mosaics.html" class="btn btn-outline-info">GO</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col text-white">
             <div class="card bg-transparent">
                 <img src="/content/pixelfight_logo.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">PixelFIGHT TCG (2022 - Current)</h5>
-                    <p class="card-text">Pixel FIGHT! PixelFIGHT is a 2-player PvP sandbox trading card game inspired by
+                    <h5 class="card-title text-white">Witch Frog Designer Art Toy (2023 - Current)</h5>
+                    <p class="card-text text-white">Pixel FIGHT! PixelFIGHT is a 2-player PvP sandbox trading card game inspired by
                         similar games like
                         Yu-Gi-Oh, Magic the Gathering, Minecraft, and Terraria. In PixelFIGHT, players can craft the
                         strongest structures and the hardiest tools. The player who destroys all their opponent’s
                         Structures
                         and depletes their HP to 0 reigns victorious!</p>
-                    <p class="card-text">PixelFIGHT was created as the midterm for a Game Prototyping course taken in
+                    <p class="card-text text-white">PixelFIGHT was created as the midterm for a Game Prototyping course taken in
+                        Fall of 2022. The main
+                        mechanic of the game is to build structures and destroy your opponent's field.</p>
+                    <a href="/mosaics.html" class="btn btn-outline-info">GO</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col text-white">
+            <div class="card bg-transparent">
+                <img src="/content/pixelfight_logo.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title text-white">PixelFIGHT TCG (2022 - Current)</h5>
+                    <p class="card-text text-white">Pixel FIGHT! PixelFIGHT is a 2-player PvP sandbox trading card game inspired by
+                        similar games like
+                        Yu-Gi-Oh, Magic the Gathering, Minecraft, and Terraria. In PixelFIGHT, players can craft the
+                        strongest structures and the hardiest tools. The player who destroys all their opponent’s
+                        Structures
+                        and depletes their HP to 0 reigns victorious!</p>
+                    <p class="card-text text-white">PixelFIGHT was created as the midterm for a Game Prototyping course taken in
                         Fall of 2022. The main
                         mechanic of the game is to build structures and destroy your opponent's field.</p>
                     <a href="/content/PixelFIGHT.zip" class="btn btn-outline-info">Play</a>
+                    <a href="/pixelfight.html" class="btn btn-outline-info">GO</a>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card bg-transparent">
-                <video src="/content/trash-thrash-video.mp4" controls></video>
+                <img src="/content/Trash_Thrash_Logo.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Trash Thrash (2021 - Current)</h5>
-                    <p class="card-text">Welcome to Trash Thrash!</p>
-                    <p class="card-text">You are a lovely suburbanite just trying to get by, but your pesty neighbors
+                    <h5 class="card-title text-white">Trash Thrash (2021 - Current)</h5>
+                    <p class="card-text text-white">Welcome to Trash Thrash!</p>
+                    <p class="card-text text-white">You are a lovely suburbanite just trying to get by, but your pesty neighbors
                         aren’t letting that be possible. They’re loud, messy, and worst of all, TRASHY.</p>
-                    <p class="card-text">You’ve come up with a BRILLIANT plan; recruit neighborhood animals to destroy
+                    <p class="card-text text-white">You’ve come up with a BRILLIANT plan; recruit neighborhood animals to destroy
                         their reputation before they can destroy yours!</p>
-                    <p class="card-text">Fight to the figurative death with all your favorite trashy but cute animals.
+                    <p class="card-text text-white">Fight to the figurative death with all your favorite trashy but cute animals.
                     </p>
-                    <p class="card-text">Trash Thrash is a dicebuilding tabletop game centered around PVP combat.
+                    <p class="card-text text-white">Trash Thrash is a dicebuilding tabletop game centered around PVP combat.
                         Players play as neighbors who deploy trash animals such as raccoons, mice, possums, and rats to
                         destroy the other’s home. This game was developed as a semester-long final project for the
                         Rutgers ITI Game Design Methodology course.</p>
                     <a href="/content/trash-thrash.zip" class="btn btn-outline-info">Play</a>
+                    <a href="/trash-thrash.html" class="btn btn-outline-info">GO</a>
                 </div>
             </div>
         </div>
@@ -89,13 +123,33 @@
             <div class="card bg-transparent">
                 <img src="/content/trick-or-treat-simulator.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Trick or Treat Simulator (2018 - Current)</h5>
-                    <p class="card-text">Trick or Treat Simulator is the game I have been working on the longest.
+                    <h5 class="card-title text-white">Trick or Treat Simulator (2018 - Current)</h5>
+                    <p class="card-text text-white">Trick or Treat Simulator is the game I have been working on the longest.
                         Originally started in Stencyl, it has seen Twine and Unity iterations.</p>
-                    <p class="card-text">In Trick or Treat Simulator, you play as Ghost Kid. Ghost Kid goes on a quest
+                    <p class="card-text text-white">In Trick or Treat Simulator, you play as Ghost Kid. Ghost Kid goes on a quest
                         for love and acceptance.</p>
                     <a href="/twine/index.html" target="_blank" class="btn btn-outline-info">Play Twine Game</a>
                     <a href="#" class="btn btn-outline-info">Download</a>
+                    <a href="/tots.html" class="btn btn-outline-info">GO</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col text-white">
+            <div class="card bg-transparent">
+                <img src="/content/skybox_finished.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Synthwave Skybox (2022)</h5>
+                    <p class="card-text text-white">Pixel FIGHT! PixelFIGHT is a 2-player PvP sandbox trading card game inspired by
+                        similar games like
+                        Yu-Gi-Oh, Magic the Gathering, Minecraft, and Terraria. In PixelFIGHT, players can craft the
+                        strongest structures and the hardiest tools. The player who destroys all their opponent’s
+                        Structures
+                        and depletes their HP to 0 reigns victorious!</p>
+                    <p class="card-text text-white">PixelFIGHT was created as the midterm for a Game Prototyping course taken in
+                        Fall of 2022. The main
+                        mechanic of the game is to build structures and destroy your opponent's field.</p>
+                    <a href="/pixelfight.html" class="btn btn-outline-info">GO</a>
                 </div>
             </div>
         </div>
@@ -104,36 +158,71 @@
             <div class="card bg-transparent">
                 <img src="/content/d8-sc.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Magic D8 Ball (2022)</h5>
-                    <p class="card-text">Ask a question, roll an 8-sided die, and read the corresponding answer on the
+                    <h5 class="card-title text-white">Magic D8 Ball (2022)</h5>
+                    <p class="card-text text-white">Ask a question, roll an 8-sided die, and read the corresponding answer on the
                         back of the card!</p>
-                    <p class="card-text">Magic D8 Ball is a business card TTRPG created in Procreate for the iPad Pro.
+                    <p class="card-text text-white">Magic D8 Ball is a business card TTRPG created in Procreate for the iPad Pro.
                         Magic D8 Ball is inspired by the classic Magic 8 Ball created by Mattel.</p>
                     <a href="https://mysticfroggames.itch.io/magic-d8-ball" target="_blank"
                         class="btn btn-outline-info">Play</a>
+                    <a href="/d8.html" class="btn btn-outline-info">GO</a>
                 </div>
             </div>
         </div>
 
         <div class="col">
             <div class="card bg-transparent">
-                <iframe id="vs_iframe" src="https://www.viewstl.com/?embedded&orientation=bottom&bgcolor=white&clean=yes&shading=flat" style="border:0;margin:0;width:100%;height:100%;"></iframe>
+                <img src="/content/cardback.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">Hopper and Dispenser Dice Roller</h5>
-                    <p class="card-text">Inspired by the hopper and dispenser from the popular game Minecraft, this
+                    <h5 class="card-title text-white">Mystic Playing Cards (2022)</h5>
+                    <p class="card-text text-white">Ask a question, roll an 8-sided die, and read the corresponding answer on the
+                        back of the card!</p>
+                    <p class="card-text text-white">Magic D8 Ball is a business card TTRPG created in Procreate for the iPad Pro.
+                        Magic D8 Ball is inspired by the classic Magic 8 Ball created by Mattel.</p>
+                    <a href="https://mysticfroggames.itch.io/magic-d8-ball" target="_blank"
+                        class="btn btn-outline-info">Play</a>
+                    <a href="/d8.html" class="btn btn-outline-info">GO</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card bg-transparent">
+                <img src="/content/puzzle.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title text-white">Mandala Effect Puzzle (2022)</h5>
+                    <p class="card-text text-white">Ask a question, roll an 8-sided die, and read the corresponding answer on the
+                        back of the card!</p>
+                    <p class="card-text text-white">Magic D8 Ball is a business card TTRPG created in Procreate for the iPad Pro.
+                        Magic D8 Ball is inspired by the classic Magic 8 Ball created by Mattel.</p>
+                    <a href="https://mysticfroggames.itch.io/magic-d8-ball" target="_blank"
+                        class="btn btn-outline-info">Play</a>
+                    <a href="/d8.html" class="btn btn-outline-info">GO</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card bg-transparent">
+                <iframe id="vs_iframe"
+                    src="https://www.viewstl.com/?embedded&url=https%3A%2F%2Fmarcinek.tech%2Fmarcinek.me%2Fhopper_dispenser.stl&noborder=yes&clean=yes&orientation=bottom&bgcolor=transparent"
+                    style="border:0;margin:0;width:100%;height:376px;"></iframe>
+                <div class="card-body">
+                    <h5 class="card-title text-white">Hopper and Dispenser Dice Roller</h5>
+                    <p class="card-text text-white">Inspired by the hopper and dispenser from the popular game Minecraft, this
                         TTRPG dice roller took a lot of trial and error. After some sizing issues it now does work and
                         it works great!</p>
                     <a href="/3d-models/dispenser-hopper.zip" target="_blank" class="btn btn-outline-info">Download</a>
                 </div>
             </div>
         </div>
-        
+
         <div class="col">
             <div class="card bg-transparent">
-                <img src="/content/in-a-jam-sc.png" class="card-img-top" alt="...">
+                <img src="/content/in-a-jam.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <h5 class="card-title">In a Jam (2021)</h5>
-                    <p class="card-text">In a Jam is a roguelike game that has you take control of a jam jar that was
+                    <h5 class="card-title text-white">In a Jam (2021)</h5>
+                    <p class="card-text text-white">In a Jam is a roguelike game that has you take control of a jam jar that was
                         dropped at a picnic. Find a way back to the basket before the bugs eat you!</p>
                     <a href="https://uncledunkle.itch.io/in-a-jam" target="_blank" class="btn btn-outline-info">Play</a>
                 </div>
