--- a/mosaics.html
+++ b/mosaics.html
@@ -50,7 +50,11 @@
 
     <div class="parent">
         <img src="/content/mosaics.png" alt="">
-        <p>Meditative Mosaics are felt pieces designed in Procreate & Adobe Illustrator and laser cut using a Glowforge. The point of Meditative Mosaics is to provide a sensory experience for children who may feel stressed or overwhelmed in their current environment.</p>
+        
+        <div class="parent">
+            <p>Meditative Mosaics are felt pieces designed in Procreate & Adobe Illustrator and laser cut using a Glowforge. The point of Meditative Mosaics is to provide a sensory experience for children who may feel stressed or overwhelmed in their current environment.</p>
+            <img src="/content/m" alt="">
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
